package es.ull.patrones.practica3.Elements;

public interface Footwear {
    void putOn();
    String getDescription();
}
